--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,20 +2,20 @@
 
 <div class="ui main text container segment">
 <h2>List all the users</h2>
-<i class="exchange icon"></i> Update a user
-<i class="remove user icon"></i> Remove a user
   <div class="ui segment">
       <div>
         <!-- If false, tell the user to create a new user -->
-        <% if(users.users === false){ %>
+        <% if(users === false){ %>
          <h5>There is no users, click the "Create a user" tab above to create one!</h5>
         <% } else{ %>
         <!-- otherwise, iterate through the users collection and list them -->
           <% users.forEach(function(user) { %>
           <ul>
             <li>
-              <a href="/user/<%= user._id %>/edit"><i class="exchange icon"></i></a>
-              <a href="/user/<%= user._id %>/edit"><i class="remove user icon"></i></a>
+              <button class="ui blue basic button"><a href="/user/<%=user._id%>/edit">Update</a></button>
+              <form action="/user/<%=user._id%>?_method=DELETE" method="post">
+                <button class="ui red basic button">Remove</button>
+              </form>
               <div class="field">
                 <span class="name">Name:</span> <%=user.name%>
               </div>
