Removed some comments, refactored some code

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,11 +8,11 @@
     <div class="field">
       <label>Name</label>
       <!-- input name gives is put into the req.body.user since we named it user -->
-      <input type="text" min="2" maxlength="10" name="user[name]" placeholder="Enter your name" required>
+      <input type="text" maxlength="15" name="user[name]" placeholder="Enter your name" min="2" required>
     </div>
     <div class="field">
       <label>Age</label>
-      <input type="number" name="user[age]" placeholder="Enter your age" required max="5">
+      <input type="number" name="user[age]" placeholder="Enter your age" required max="125">
     </div>
     <div class="field">
       <label>Email</label>
