--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,7 @@
 <head>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-resource.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 </script>
 <script type="text/javascript" src="app.js"></script>
@@ -15,8 +16,9 @@
 
       <h1>Hey! Click on the buttons that you want! </h1>
       <button class="ui blue basic button" ng-click="list()">List all user</button>
-      <button class="ui red basic button" ng-click="create()">Add new user</button>
-      <button class="ui green basic button" ng-click="find()">Find user by Id</button>
+      <button class="ui red basic button" ng-click="createPage()">Add new user</button>
+      <button class="ui green basic button" ng-click="findPage()">Find user by ID</button>
+
       <div id="main" class="ui segment">
           <div ng-view></div>
       </div>
