--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
       <h1>Hey! Click on the buttons that you want! </h1>
       <button class="ui blue basic button" ng-click="list()">List all user</button>
       <button class="ui red basic button" ng-click="createPage()">Add new user</button>
-      <button class="ui green basic button" ng-click="findPage()">Find user by ID</button>
+      <!-- <button class="ui green basic button" ng-click="findPage()">Find user by ID</button> -->
 
       <div id="main" class="ui segment">
           <div ng-view></div>
